# CtxMenu

./: CMakeLists.txt  LICENSE  README.md  ThirdPartyNotices.txt
resource/: CtxMenu.rc  resource.h
samples/: sample.xml
scripts/: install.bat  uninstall.bat
src/: ClassFactory.cpp  ClassFactory.h  ContextMenuHandler.cpp  ContextMenuHandler.h  CtxMenu.cpp  CtxMenu.h  CtxMenuAction.cpp  CtxMenuAction.h  CtxMenuExport.def  CtxMenuItem.cpp  CtxMenuItem.h  GlobalDef.h  IconManager.cpp  IconManager.h  InstanceGlobal.cpp  InstanceGlobal.h  Logger.cpp  Logger.h  dllmain.cpp
